deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-06-07T02:13:19Z"
  generation: 2
  labels:
    app: kube-nginx
  name: kube-nginx
  namespace: default
  resourceVersion: "8522"
  uid: 45d8a26f-02f4-4f72-9f39-bfa2aab9e727
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kube-nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kube-nginx
    spec:
      containers:
      - image: docker.io/library/nginx:latest
        imagePullPolicy: IfNotPresent
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: website-volume
          mountPath: /usr/share/nginx/html
        readinessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: WhatIf
          initialDelaySeconds: 45
          periodSeconds: 3
          failureThreshold: 5
        livenessProbe:
          exec:
            command:
            - cat
            - /etc/hosts
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 2
      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
      volumes:
      - name: website-volume
        hostPath:
          path: /mnt/data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      
      
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-06-07T02:13:19Z"
    lastUpdateTime: "2026-06-07T02:13:47Z"
    message: ReplicaSet "kubernetes-bootcamp-67fbdd6b79" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-06-07T03:18:40Z"
    lastUpdateTime: "2026-06-07T03:18:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  terminatingReplicas: 0
  updatedReplicas: 2
