ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "kubenginx.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-nginx
            port:
              number: 8080
